fix button align

--- a/stylesheets/mach-politik.ch.css
+++ b/stylesheets/mach-politik.ch.css
@@ -31,7 +31,7 @@ h1::first-letter {
 	float: left;
 }
 
-.jstb_help {
+.jstElements .jstb_help {
 	float: right;
 }
 
